feat: rebrand frontend and add source images
